refactor FileDownloader to use URI for file URL handling